kubernetes/overlays/test/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minecharts
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: minecharts-test-minecharts-api-strip@kubernetescrd
